# signal-pipeline

./: .gitignore  README.md  pyproject.toml
config/: sources.yaml
docs/dune_queries/: gas_volatility.sql  hl_top_traders.sql  smart_money.sql
examples/: dune_whale_flow.sql  payload_sample.json
scripts/: test_hlp_live.py
src/signal_pipeline/: assembler.py  cli.py  model.py  ranking.py  schema.py  validation.py
src/signal_pipeline/sources/: base.py  deribit.py  dune.py  hlp.py  liquidation.py  perp.py  polymarket.py  social.py
src/signal_pipeline/store/: base.py  memory.py
tests/: test_assembler.py  test_model.py  test_ranking.py  test_schema.py  test_sources_deribit.py  test_sources_dune.py  test_sources_hlp.py  test_sources_liquidation.py  test_validation.py
