[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-pipeline"
version = "0.1.0"
description = "Source-agnostic signal ingestion and ranking pipeline for crypto AI agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "click>=8",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
signal-pipeline = "signal_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
